--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
@@ -47,4 +48,7 @@ next-env.d.ts
 .cursor/
 
 # agents
-.agents/
+.agent/
+
+# codesandbox
+.codesandbox/
