--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.14.2",
     "highlight.js": "^11.11.1",
     "json-stringify-pretty-compact": "^4.0.0",
     "lucide-react": "^0.554.0",
@@ -37,6 +38,7 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.0",
     "streamdown": "^1.6.7",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
