--- a/package.json
+++ b/package.json
@@ -29,17 +29,20 @@
     "@tiptap/suggestion": "^3.17.1",
     "class-variance-authority": "^0.7.1",
     "dompurify": "^3.3.0",
+    "face-api.js": "^0.22.2",
     "framer-motion": "^12.23.24",
     "highlight.js": "^11.11.1",
     "json-stringify-pretty-compact": "^4.0.0",
     "lucide-react": "^0.554.0",
     "next": "^15.5.7",
+    "postprocessing": "^6.38.2",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "recharts": "^3.5.0",
     "streamdown": "^1.6.7",
+    "three": "^0.182.0",
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^5.1.3",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
@@ -61,5 +65,8 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
+  },
+  "optionalDependencies": {
+    "encoding": "^0.1.13"
   }
 }
